==> wbasser/CommonSoftwareFramework/HAL/Pico/I2C/Core/Trunk/I2c.c <==
#include "Clock/Clock.h"
#include "SystemTick/SystemTick.h"
#include "I2C/I2c.h"
#define BAUD_RATE_SLOW      ( 100000l )
#define BAUD_RATE_FAST      ( 400000l )
#define CMD_SEND_STOP       ( 3 )
#define LCLCTL_SIZE         sizeof( LCLCTL )

BOOL I2c_Initialize( void )
{
  PI2CDEF                 ptDef;
  I2CDEVENUM              eDev;
  SercomI2cm*             ptI2c;
  U32                     uTemp;
  SERCOM_I2CM_CTRLA_Type  tCtrlA;
  
  // for each device
  for ( eDev = 0; eDev < I2C_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // disable the control and wait for done
    ptI2c->CTRLA.bit.SWRST = 1;
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    
    // now set the baudrate
    uTemp = ( ptDef->bFastSpeed ) ? BAUD_RATE_FAST : BAUD_RATE_SLOW;
    ptI2c->BAUD.reg = ComputeBaudRate( ptDef->eChan, uTemp );
    
    // now set up control B
    ptI2c->CTRLB.reg = SERCOM_I2CM_CTRLB_SMEN;

    // enable the interrupts
    aePhyToDefMap[ ptDef->eChan ] = eDev;
    
    // enable the interrupt in the NVIC
    NVIC_EnableIRQ( SERCOM0_IRQn + ptDef->eChan );
    NVIC_SetPriority( SERCOM0_IRQn + ptDef->eChan, 3 );
      
    // now build control A
    tCtrlA.reg = SERCOM_I2CM_CTRLA_MODE_I2C_MASTER;
    tCtrlA.reg |= ( ptDef->bRunStandby ) ? SERCOM_I2CM_CTRLA_RUNSTDBY : 0;
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_ENABLE;
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_INACTOUT( 1 );
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_SDAHOLD( 2 );
    ptI2c->CTRLA = tCtrlA;
    
    // now wait for done
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
  }

  // return OK
  return( FALSE );
}

I2CERROR I2c_Write( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR 	    eError = I2C_ERROR_NONE;
  PI2CDEF 	  ptDef;
  PLCLCTL 	  ptCtl;
  U32         uTime;  
  SercomI2cm* ptI2c;

  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );
    
    // copy the values to the local controls
    ptCtl->ptXfrCtl = ptXfrCtl;
    ptCtl->wBufIdx = 0;

    // clear any error bits in the status/flag
    ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;

    // set the running flag/direction/state
    ptCtl->bRunning = TRUE;
    ptCtl->eBusDir = BUS_DIR_WRITE;
    ptCtl->eError = I2C_ERROR_NONE;

    // enable the interrupts
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MASK;
    ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_ERROR;
    
    // now write the address with read bit cleared
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    ptI2c->ADDR.bit.ADDR = ( ptXfrCtl->nDevAddr << 1 ) | BUS_DIR_WRITE;

    // check for a blocking device
    if ( ptDef->pvCallBack == NULL )
    {
      // wait till done or timeout
      ptCtl->bRunning = TRUE;
      uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;
      while( ptCtl->bRunning )
      {
        // check for timeout
        if ( SystemTick_GetTimeMsec( ) >= uTime )
        {
          // timeout occured - flag error
          ptCtl->bRunning = FALSE;
          ptCtl->eError = I2C_ERROR_TIMEOUT;
        }
      }

      // copy the error
      eError = ptCtl->eError;
    
      // disable the interrupts
      ptI2c->INTENCLR.reg = SERCOM_I2CM_INTENCLR_MB | SERCOM_I2CM_INTENCLR_ERROR;
    }
    else
    {
      // set the error to busy
      eError = I2C_ERROR_BLKING;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }

  // return the status
  return( eError );
}

I2CERROR I2c_Read( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR      eError = I2C_ERROR_NONE;
  PI2CDEF     ptDef;
  PLCLCTL     ptCtl;
  U32         uTime;  
  SercomI2cm* ptI2c;
  U8          nAddr;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // copy the values to the local controls
    ptCtl->ptXfrCtl = ptXfrCtl;
    ptCtl->wBufIdx = 0;

    // clear any error bits in the status
    ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;

    // clear the interrupts
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MASK;
    
    // clear the ack flag
    ptI2c->CTRLB.reg &= ~SERCOM_I2CM_CTRLB_ACKACT;

    // set the running flag/direction/state
    ptCtl->bRunning = TRUE;

    // clear the error
    ptCtl->eError = I2C_ERROR_NONE;

    // compute the bus address
    nAddr = ( ptXfrCtl->nDevAddr << 1 );

    // process the address 
    if ( ptXfrCtl->nAddrLen == 0 )
    {
      // enable all the interrupts/set the bus direction/adjust the address
      ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_SB | SERCOM_I2CM_INTENSET_ERROR;
      ptCtl->eBusDir = BUS_DIR_READ;
      nAddr |= BUS_DIR_READ;
    }
    else
    {
      // enable only the MB and Error interrupts
      ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_ERROR;
      ptCtl->eBusDir = BUS_DIR_RDWRITE;
    }

    // now write the address with read bit set
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    ptI2c->ADDR.bit.ADDR = nAddr;

    // check for a blocking device
    if ( ptDef->pvCallBack == NULL )
    {
      ptCtl->bRunning = TRUE;
      uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;
      while( ptCtl->bRunning )
      {
        // check for timeout
        if ( SystemTick_GetTimeMsec( ) >= uTime )
        {
          // timeout occured - flag error
          ptCtl->bRunning = FALSE;
          ptCtl->eError = I2C_ERROR_TIMEOUT;
        }
      }

      // copy the error
      eError = ptCtl->eError;
      
      // disable the interrupts
      ptI2c->INTENCLR.reg = SERCOM_I2CM_INTENCLR_MB | SERCOM_I2CM_INTENCLR_SB | SERCOM_I2CM_INTENCLR_ERROR;
    }
    else
    {
      // set the error to busy
      eError = I2C_ERROR_BLKING;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  // return the error
  return(( I2CERROR )eError );
}

I2CERROR I2c_Ioctl( I2CDEVENUM eDev, I2CACTION eAction, PVOID pvData )
{
  I2CERROR      eError = I2C_ERROR_NONE;
  PI2CDEF     ptDef;
  PU32        puData;
  SercomI2cm* ptI2c;
  U32         uTime;
  PI2CCHKBSY  ptBusyParams;

  // set the pointer to avoid compiler errors
  puData = ( PU32 )pvData;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // process the action
    switch( eAction )
    {
      case I2C_ACTION_POLL_DEVICE :
        // get the parameters
        ptBusyParams = ( PI2CCHKBSY )pvData;

        // clear any error bits in the status/clear ACK flag
        ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;
        ptI2c->CTRLB.reg &= ~SERCOM_I2CM_CTRLB_ACKACT;

        // now write the address with read bit set
        #ifdef __SAM_D21_SUBFAMILY
        while( ptI2c->SYNCBUSY.bit.SWRST );
        #endif //  __SAM_D21_SUBFAMILY
        ptI2c->ADDR.bit.ADDR = ( ptBusyParams->nDevAddr << 1 ) | ptBusyParams->bReadMode;

        // get the status - check for flag
        uTime = SystemTick_GetTimeMsec( ) + 10;
        while( SystemTick_GetTimeMsec( ) < uTime  )
        {
          // check for MB flag
          if ( ptI2c->INTFLAG.bit.MB )
          {
            // clear the flag
            ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MB;

            // break;
            break;
          }
        }

        // check for error or RXNACK
        if ( ptI2c->STATUS.reg & SERCOM_I2CM_STATUS_BUSERR )
        {
          // set the error
          eError = I2C_ERROR_BUSFAULT;
        }
        // return the status based on RXNACK
        else if ( ptI2c->STATUS.reg & SERCOM_I2CM_STATUS_RXNACK )
        {
          // set error 
          eError = I2C_ERROR_SLVNAK;
        }

        // issue stop
        #ifdef __SAM_D21_SUBFAMILY
        while( ptI2c->SYNCBUSY.reg & SERCOM_I2CM_SYNCBUSY_MASK );
        #endif //  __SAM_D21_SUBFAMILY
        ptI2c->CTRLB.reg |= SERCOM_I2CM_CTRLB_CMD( CMD_SEND_STOP );

        // clear status bits
        ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;
        break;
        
      case I2C_ACTION_SET_DEVADDR :
        break;
        
      case I2C_ACTION_GET_DEVADDR :
        break;
        
      default :
        // illegal action
        eError = I2C_ERROR_ILLACT;
        break;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  // return the error
  return( eError );
}
