==> wbasser/CommonSoftwareFramework/HAL/Zephyr/I2C/Core/Trunk/I2c.c <==
#include <drivers/i2c.h>
#include "I2C/I2c.h"
#define LCLCTL_SIZE         sizeof( LCLCTL )

BOOL I2c_Initialize( void )
{
  BOOL        bStatus = FALSE;
  PI2CDEF     ptDef;
  I2CDEVENUM  eDev;
  PLCLCTL     ptCtl;
  U32         uFlags;
  
  // for each device
  for ( eDev = 0; eDev < I2C_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // clear the flags
    uFlags = 0;
    
    // clear the ok flag
    ptCtl->bOkay = FALSE;
    
    // get the bindings
    if (( ptCtl->ptI2c = device_get_binding( ptDef->pcName )) != NULL )
    {
      // configure it
      switch( ptDef->eSpeedSel )
      {
        case I2C_SPDSEL_100KHZ :
          uFlags = I2C_SPEED_STANDARD;
          break;
          
        case I2C_SPDSEL_400KHZ :
          uFlags = I2C_SPEED_FAST;
          break;
          
        case I2C_SPDSEL_1MHZ :
          uFlags = I2C_SPEED_FAST_PLUS;
          break;
          
        case I2C_SPDSEL_3MHZ4 :
          uFlags = I2C_SPEED_HIGH;
          break;
          
        case I2C_SPDSEL_5MHZ :
          uFlags = I2C_SPEED_ULTRA;
          break;
          
        default :
          uFlags = I2C_SPEED_STANDARD;
          break;
      }
      
      // now set master mode
      uFlags |= I2C_MODE_MASTER;

      // configure it
      if ( i2c_configure( ptCtl->ptI2c, uFlags ) == 0 )
      {
        // set the ok flag
        ptCtl->bOkay = TRUE;
        
        // Originally was setting bStatus to true, when it should be false (to indicate no errors)
        bStatus = FALSE;
      }
    }
    else
    {
      // set error flag
      bStatus |= TRUE;
    }
  }
  
  // return status
  return( bStatus );
}

I2CERROR I2c_Write( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR 	  eError = I2C_ERROR_NONE;
  PI2CDEF 	  ptDef;
  PLCLCTL 	  ptCtl;
  PU8         pnBuffer;
  U16         wIdx, wBufSize;

  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // check for valid device
    if ( ptCtl->bOkay )
    {
      // allocate the buffer
      wBufSize = ptXfrCtl->nAddrLen + ptXfrCtl->wDataLen;
      if (( pnBuffer = k_malloc( wBufSize )) != NULL )
      {
        // copy the address and data  
        for ( wIdx = 0; wIdx < ptXfrCtl->nAddrLen; wIdx++ )
        {
          // copy the address bytes
          *( pnBuffer + wIdx ) = ptXfrCtl->tAddress.anValue[ wIdx ];
        }
        
        // now copy the data
        memcpy((  pnBuffer + wIdx ), ptXfrCtl->pnData, ptXfrCtl->wDataLen );

        // do it
        if ( i2c_write( ptCtl->ptI2c, pnBuffer, wBufSize, ptXfrCtl->nDevAddr ) != 0 )
        {
          // set an error
          eError = I2C_ERROR_TIMEOUT;
        }
        
        // free the memory
        k_free( pnBuffer );
      }
    }
    else
    {
      // set the error
      eError = I2C_ERROR_DEVERR;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }

  // return the status
  return( eError );
}

I2CERROR I2c_Read( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERROR    eError = I2C_ERROR_NONE;
  PI2CDEF     ptDef;
  PLCLCTL     ptCtl;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // check for valid device
    if ( ptCtl->bOkay )
    {
      // now send the address and read
      if ( i2c_write_read( ptCtl->ptI2c, ptXfrCtl->nDevAddr, ( PCV )&ptXfrCtl->tAddress, ptXfrCtl->nAddrLen, ptXfrCtl->pnData, ptXfrCtl->wDataLen ) != 0 )
      {
        // set the error
        eError = I2C_ERROR_TIMEOUT;
      }
    }
    else
    {
      // set the error
      eError = I2C_ERROR_DEVERR;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  // return the error
  return(( I2CERROR )eError );
}

I2CERROR I2c_Ioctl( I2CDEVENUM eDev, I2CACTION eAction, PVOID pvData )
{
  I2CERROR    eError = I2C_ERROR_NONE;
  PI2CDEF     ptDef;
  PLCLCTL     ptCtl;
  PU32        puData;
  U8          nData;
  PI2CCHKBSY  ptBusyParams;

  // set the pointer to avoid compiler errors
  puData = ( PU32 )pvData;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];

    // process the action
    switch( eAction )
    {
      case I2C_ACTION_POLL_DEVICE :
        // get the parameters
        ptBusyParams = ( PI2CCHKBSY )pvData;
        
        // check read/write
        if ( ptBusyParams->bReadMode )
        {
          // perform a read          
          if ( i2c_read( ptCtl->ptI2c, &nData, 1, ptBusyParams->nDevAddr ) != 0 )
          {
            // set the error
            eError = I2C_ERROR_SLVNAK;
          }
        }
        else
        {
          // perform a write
          nData = 0;
          if ( i2c_write( ptCtl->ptI2c, &nData, 1, ptBusyParams->nDevAddr ) != 0 )
          {
            // set the error
            eError = I2C_ERROR_SLVNAK;
          }
        }
        break;
        
      case I2C_ACTION_SET_DEVADDR :
        break;
        
      case I2C_ACTION_GET_DEVADDR :
        break;
        
      default :
        // illegal action
        eError = I2C_ERROR_ILLACT;
        break;
    }
  }
  else
 {
    // illegal device
    eError = I2C_ERROR_ILLDEV;
  }
  
  // return the error
  return( eError );
}
